--- a/SpritePacker/MainWindow.xaml
+++ b/SpritePacker/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="SpritePacker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="900" Width="1200">
+	<Grid>
+		<Canvas x:Name="ViewCanvas" HorizontalAlignment="Left" Height="600" Margin="10,10,0,0" VerticalAlignment="Top" Width="700" Background="Cyan"/>
+		<Image x:Name="PreviewImage" HorizontalAlignment="Left" Height="150" Margin="776,106,0,0" VerticalAlignment="Top" Width="150"/>
+		<Button x:Name="MoveToCanvas" Content="Add To Canvas" HorizontalAlignment="Left" Margin="776,288,0,0" VerticalAlignment="Top" Width="150" Click="MoveToCanvas_Click"/>
+		<Button x:Name="ImportFile" Content="Import File..." HorizontalAlignment="Left" Margin="776,261,0,0" VerticalAlignment="Top" Width="150" Click="ImportFile_Click"/>
+
+	</Grid>
 </Window>
